--- a/basic-learn/01-basic-knowledge/01基础知识.md
+++ b/basic-learn/01-basic-knowledge/01基础知识.md
@@ -157,7 +157,7 @@
 
 ### 举例
 
-![选择算法图](https://ailearning.apachecn.org/docs/ml/img/机器学习基础-选择算法.jpg)
+![选择算法图](C:%5CUsers%5C26969%5CDesktop%5C%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%9F%BA%E7%A1%80-%E9%80%89%E6%8B%A9%E7%AE%97%E6%B3%95.jpg)
 
 ### 开发流程
 
