--- a/basic-learn/03-decision-tree/03决策树算法.md
+++ b/basic-learn/03-decision-tree/03决策树算法.md
@@ -299,12 +299,9 @@ ID3算法在决策树各个节点上使用<mark>**信息增益**</mark>准则选
 
 ```python
 def createDataSet():
-    dataSet =  [[1, 1, 'yes'],
-                [1, 1, 'yes'],
-                [1, 0, 'no'],
-                [0, 1, 'no'],
-                [0, 1, 'no']]
-    labels = ['no surfacing', 'flippers']
+    dataSet = [[1, 1, '是🐟'], [1, 1, '是🐟'], [1, 0, '不是🐟'], [0, 1, '不是🐟'],
+               [0, 1, '不是🐟']]
+    labels = ['不浮出水面是否可以生存', '是否有脚蹼']
     return dataSet, labels
 ```
 
@@ -314,7 +311,190 @@ def createDataSet():
 
 #### 分析数据
 
-使用如下公式计算信息熵：
+使用如下公式计算计算给定数据集的信息熵：
 $$
 Info(D)=-\sum^m_{i=1}p_i\log_2p_i
 $$
+
+```python
+def calInfoEntropy(dataSet):
+    """计算信息熵  
+    Args:
+        dataSet 数据集
+    Returns:
+        返回 每一组feature下的某个分类下的信息熵
+    """    
+    # 统计标签出现的次数
+    label_count = Counter(data[-1] for data in dataSet)
+    # 计算概率
+    probs = [p[1] / len(dataSet) for p in label_count.items()]
+    # 计算香农熵
+    infoEntropy = sum([-p * log(p, 2) for p in probs])
+    return infoEntropy   
+```
+
+按照给定特征划分数据集
+
+```python
+def splitDataSet(dataSet, index, value):
+    """就是依据index列进行分类，如果index列的数据等于 value的时候，就要将 index 划分到我们创建的新的数据集中
+    Args:
+        dataSet 数据集                 待划分的数据集
+        index 表示每一行的index列        划分数据集的特征
+        value 表示index列对应的value值   需要返回的特征的值。
+    Returns:
+        index列为value的数据集【该数据集需要排除index列】
+    """
+    retDataSet = []
+    for featVec in dataSet:
+        # index列为value的数据集【该数据集需要排除index列】
+        # 判断index列的值是否为value
+        if featVec[index] == value:
+            reducedFeatVec = featVec[:index]
+            reducedFeatVec.extend(featVec[index+1:])
+            # 收集结果值 index列为value的行【该行需要排除index列】
+            retDataSet.append(reducedFeatVec)
+    return retDataSet
+```
+
+选择最好的数据集划分方式：**具有最高信息增益**
+
+```python
+def chooseBestFeatureToSplit(dataSet):
+    """chooseBestFeatureToSplit(选择最好的特征)
+    Args:
+        dataSet 数据集
+    Returns:
+        bestFeature 最优的特征列
+    """
+    # 求特征数
+    numFeatures = len(dataSet[0]) - 1
+    # 数据集的原始信息熵
+    baseEntropy = calInfoEntropy(dataSet)
+    # 最优的信息增益值, 和最优的Featurn编号
+    bestInfoGain, bestFeature = 0.0, -1
+    # 遍历所有的特征
+    for i in range(numFeatures):
+        # 获取对应的feature下的所有数据
+        featList = [example[i] for example in dataSet]
+        # 获取剔重后的集合，使用set对list数据进行去重
+        uniqueVals = set(featList)
+        # 创建一个临时的信息熵
+        newEntropy = 0.0
+        # 遍历某一列的value集合，计算该列的信息熵
+        # 遍历当前特征中的所有唯一属性值，对每个唯一属性值划分一次数据集
+        # 计算数据集的新熵值，并对所有唯一特征值得到的熵求和。
+        for value in uniqueVals:
+            subDataSet = splitDataSet(dataSet, i, value)
+            # 计算概率
+            prob = len(subDataSet)/float(len(dataSet))
+            # 计算信息熵
+            newEntropy += prob * calInfoEntropy(subDataSet)。
+        infoGain = baseEntropy - newEntropy
+        print('infoGain=', infoGain, 'bestFeature=', i, baseEntropy, newEntropy)
+        if (infoGain > bestInfoGain):
+            bestInfoGain = infoGain
+            bestFeature = i
+    return bestFeature
+```
+
+#### 训练算法
+
+创建树的函数代码如下:
+
+```python
+def majorityCnt(classList):
+    """majorityCnt(选择出现次数最多的一个结果)
+    Args:
+        classList label列的集合
+    Returns:
+        bestFeature 最优的特征列
+    """
+    major_label = Counter(classList).most_common(1)[0]
+    return major_label
+    
+def createTree(dataSet, labels):
+    classList = [example[-1] for example in dataSet]
+    # 如果数据集的最后一列的第一个值出现的次数=整个集合的数量，也就说只有一个类别，就只直接返回结果就行
+    # 第一个停止条件: 所有的类标签完全相同，则直接返回该类标签。
+    # count() 函数是统计括号中的值在list中出现的次数
+    if classList.count(classList[0]) == len(classList):
+        return classList[0]
+    # 如果数据集只有1列，那么最初出现label次数最多的一类，作为结果
+    # 第二个停止条件: 使用完了所有特征，仍然不能将数据集划分成仅包含唯一类别的分组。
+    if len(dataSet[0]) == 1:
+        return majorityCnt(classList)
+
+    # 选择最优的列，得到最优列对应的label含义
+    bestFeat = chooseBestFeatureToSplit(dataSet)
+    # 获取label的名称
+    bestFeatLabel = labels[bestFeat]
+    # 初始化myTree
+    myTree = {bestFeatLabel: {}}
+    # 注: labels列表是可变对象，在PYTHON函数中作为参数时传址引用，能够被全局修改
+    # 所以这行代码导致函数外的同名变量被删除了元素，造成例句无法执行，提示'no surfacing' is not in list
+    del(labels[bestFeat])
+    # 取出最优列，然后它的branch做分类
+    featValues = [example[bestFeat] for example in dataSet]
+    uniqueVals = set(featValues)
+    for value in uniqueVals:
+        # 求出剩余的标签label
+        subLabels = labels[:]
+        # 遍历当前选择特征包含的所有属性值，在每个数据集划分上递归调用函数createTree()
+        myTree[bestFeatLabel][value] = createTree(splitDataSet(dataSet, bestFeat, value), subLabels)
+        # print ('myTree', value, myTree)
+    return myTree
+```
+
+算法得出的决策树如下：
+
+![image-20221216120351798](https://note-image-1307786938.cos.ap-beijing.myqcloud.com/typora/image-20221216120351798.png)
+
+#### 测试算法
+
+```python
+def classify(inputTree, featLabels, testVec):
+    """classify(给输入的节点，进行分类)
+
+    Args:
+        inputTree  决策树模型
+        featLabels Feature标签对应的名称
+        testVec    测试输入的数据
+    Returns:
+        classLabel 分类的结果值，需要映射label才能知道名称
+    """
+    # 获取tree的根节点对于的key值
+    firstStr = list(inputTree.keys())[0]
+    # 通过key得到根节点对应的value
+    secondDict = inputTree[firstStr]
+    # 判断根节点名称获取根节点在label中的先后顺序，这样就知道输入的testVec怎么开始对照树来做分类
+    featIndex = featLabels.index(firstStr)
+    # 测试数据，找到根节点对应的label位置，也就知道从输入的数据的第几位来开始分类
+    key = testVec[featIndex]
+    valueOfFeat = secondDict[key]
+    print('+++', firstStr, 'xxx', secondDict, '---', key, '>>>', valueOfFeat)
+    # 判断分枝是否结束: 判断valueOfFeat是否是dict类型
+    if isinstance(valueOfFeat, dict):
+        classLabel = classify(valueOfFeat, featLabels, testVec)
+    else:
+        classLabel = valueOfFeat
+    return classLabel
+
+def fishTest():
+    # 1.创建数据和结果标签
+    myDat, labels = createDataSet()
+    myTree = createTree(myDat, copy.deepcopy(labels))
+    # [1, 1]表示要取的分支上的节点位置，对应的结果值
+    print(classify(myTree, labels, [1, 1]))
+
+```
+
+```python
++++ 不浮出水面是否可以生存 xxx {0: '不是🐟', 1: {'是否有脚蹼': {0: '不是🐟', 1: '是🐟'}}} --- 1 >>> {'是否有脚蹼': {0: '不是🐟', 1: '是🐟'}}  
++++ 是否有脚蹼 xxx {0: '不是🐟', 1: '是🐟'} --- 1 >>> 是🐟
+是🐟
+```
+
+#### 使用算法:
+
+此步骤可以适用于任何监督学习任务，而使用决策树可以更好地理解数据的内在含义。
