--- a/basic-learn/04-naive-bayesian/04朴素贝叶斯.ipynb
+++ b/basic-learn/04-naive-bayesian/04朴素贝叶斯.ipynb
@@ -310,6 +310,8 @@
     "\n",
     "构建一个快速过滤器来屏蔽在线社区留言板上的侮辱性言论。如果某条留言使用了负面或者侮辱性的语言，那么就将该留言标识为内容不当。对此问题建立两个类别: 侮辱类和非侮辱类，使用 1 和 0 分别表示。\n",
     "\n",
+    "具体代码：[https://github.com/yijunquan-afk/machine-learning/blob/master/basic-learn/04-naive-bayesian/code/Naive_Bayesian_project1.py](https://github.com/yijunquan-afk/machine-learning/blob/master/basic-learn/04-plain-bayesian/code/Naive_Bayesian_project1.py)\n",
+    "\n",
     "### 开发流程\n",
     "\n",
     "- 收集数据: 可以使用任何方法 \n",
@@ -386,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,14 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['him', 'is', 'buying', 'stop', 'not', 'stupid', 'flea', 'worthless', 'to', 'maybe', 'park', 'how', 'licks', 'quit', 'has', 'dalmation', 'posting', 'food', 'take', 'please', 'so', 'problems', 'love', 'help', 'steak', 'my', 'dog', 'I', 'garbage', 'cute', 'ate', 'mr']\n"
+      "['how', 'garbage', 'to', 'flea', 'posting', 'steak', 'so', 'I', 'mr', 'him', 'love', 'ate', 'quit', 'dog', 'take', 'has', 'cute', 'licks', 'please', 'stop', 'food', 'buying', 'not', 'park', 'worthless', 'maybe', 'my', 'dalmation', 'problems', 'is', 'help', 'stupid']\n"
      ]
     }
    ],
@@ -454,17 +456,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0.,\n",
-       "       0., 0., 1., 0., 1., 0., 1., 0., 1., 1., 0., 0., 0., 0., 0.])"
+       "array([0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0.,\n",
+       "       0., 1., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0., 1., 0.])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -647,6 +649,8 @@
     "\n",
     "完成朴素贝叶斯的一个最著名的应用: 电子邮件垃圾过滤。\n",
     "\n",
+    "具体代码：[https://github.com/yijunquan-afk/machine-learning/blob/master/basic-learn/04-naive-bayesian/code/Naive_Bayesian_project2.py](https://github.com/yijunquan-afk/machine-learning/blob/master/basic-learn/04-plain-bayesian/code/Naive_Bayesian_project2.py)\n",
+    "\n",
     "### 开发流程\n",
     "\n",
     "1、收集数据: 提供文本文件\n",
@@ -680,7 +684,224 @@
     "Let me know\n",
     "Eugene\n",
     "```\n",
-    "全部的数据存储在[]()中"
+    "全部的数据存储在[https://github.com/yijunquan-afk/machine-learning/tree/master/basic-learn/04-plain-bayesian/data/4.NaiveBayes/email](https://github.com/yijunquan-afk/machine-learning/tree/master/basic-learn/04-plain-bayesian/data/4.NaiveBayes/email)中"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 准备数据\n",
+    "\n",
+    "将文本文件解析成词条向量，使用正则表达式来切分文本。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "def textParse(inputString):\n",
+    "    '''接收一个大字符串并将其解析为字符串列表\n",
+    "    Args:\n",
+    "        inputString -- 大字符串\n",
+    "    Returns:\n",
+    "        去掉少于 2 个字符的字符串，并将所有字符串转换为小写，返回字符串列表\n",
+    "    '''\n",
+    "\n",
+    "    # 使用正则表达式来切分句子，其中分隔符是除单词、数字外的任意字符串\n",
+    "    listOfTokens = re.split(r'\\W+', inputString)\n",
+    "    return [tok.lower() for tok in listOfTokens if len(tok) > 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['this', 'book', 'the', 'best', 'book', 'python', 'have', 'ever', 'laid', 'eyes', 'upon']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 测试一下\n",
+    "mySent = 'This book is the best book on Python or M.L. I have ever laid eyes upon.'\n",
+    "print(textParse(mySent))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 分析数据\n",
+    "\n",
+    "和项目1一样"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 训练算法\n",
+    "\n",
+    "使用项目1的函数`trainNB()`进行训练"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trainNB(trainMatrix, trainLabel):\n",
+    "    \"\"\"训练数据\n",
+    "\n",
+    "    Args:\n",
+    "        trainMatrix (矩阵): 文档单词矩阵 [[1,0,1,1,1....],[],[]...]\n",
+    "        trainLabel (向量): 文档类别矩阵 [0,1,1,0....]\n",
+    "    \"\"\"\n",
+    "    # 总文件数\n",
+    "    numTrainDocs = len(trainMatrix)\n",
+    "    # 总单词数\n",
+    "    numWords = len(trainMatrix[0])\n",
+    "\n",
+    "    # 侮辱性文件的出现概率，即trainLabel中所有的1的个数，\n",
+    "    # 使用拉普拉斯平滑校正\n",
+    "    pc_1 = sum(trainLabel) / float(numTrainDocs)\n",
+    "\n",
+    "    # 构造单词出现次数列表\n",
+    "    p0Num = zeros(numWords)  \n",
+    "    p1Num = zeros(numWords)\n",
+    "\n",
+    "    # 整个数据集单词出现总数\n",
+    "    p0Denom = 0.0\n",
+    "    p1Denom = 0.0\n",
+    "\n",
+    "    for doc in range(numTrainDocs):\n",
+    "        if trainLabel[doc] == 1:\n",
+    "            # 词在类中出现的次数\n",
+    "            p1Num += trainMatrix[doc]\n",
+    "            # 类中的总词数\n",
+    "            p1Denom += sum(trainMatrix[doc])\n",
+    "        else:\n",
+    "            p0Num += trainMatrix[doc]\n",
+    "            p0Denom += sum(trainMatrix[doc])\n",
+    "    # 使用log避免累乘数太小\n",
+    "    # 类别1的概率向量，使用拉普拉斯平滑校正\n",
+    "    p1Vect = log(p1Num + 1  / p1Denom + 2)\n",
+    "    # 类别0的概率向量，使用拉普拉斯平滑校正\n",
+    "    p0Vect = log(p0Num + 1 / p0Denom + 2)\n",
+    "    return p0Vect, p1Vect, pc_1  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 测试算法\n",
+    "\n",
+    "使用朴素贝叶斯进行交叉验证\n",
+    "\n",
+    "#### 交叉验证\n",
+    "\n",
+    "问题：没有足够的数据留出一个测试集\n",
+    "\n",
+    "方案：每一个数据既被当作训练样本也被当作测试样本\n",
+    "\n",
+    "![image-20220317111039287](https://note-image-1307786938.cos.ap-beijing.myqcloud.com/typora/qshell/image-20220317111039287.png)\n",
+    "\n",
+    "**线性回归一维例子**：\n",
+    "\n",
+    "> 将数据分成紫、绿、蓝三个子集\n",
+    ">\n",
+    "> 对于蓝色划分：使用紫、绿数据训练线性模型，使用蓝色数据计算均方误差\n",
+    ">\n",
+    "> 对于绿色划分：使用紫、蓝数据训练线性模型，使用绿色数据计算均方误差\n",
+    ">\n",
+    "> 对于紫色划分：使用绿、蓝数据训练线性模型，使用紫色数据计算均方误差\n",
+    ">\n",
+    "> ![image-20220317111411016](https://note-image-1307786938.cos.ap-beijing.myqcloud.com/typora/qshell/image-20220317111411016.png)\n",
+    "\n",
+    "## "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def spamTest():\n",
+    "    \"\"\"交叉验证\n",
+    "    \"\"\"\n",
+    "    docList = []\n",
+    "    classList = []\n",
+    "    fullText = []\n",
+    "    for i in range(1, 26):\n",
+    "        # 切分，解析数据，并归类为 1 类别\n",
+    "        wordList = textParse(\n",
+    "            open('data/4.NaiveBayes/email/spam/%d.txt' % i,\n",
+    "                 'r',\n",
+    "                 encoding='utf-8').read())\n",
+    "        docList.append(wordList)\n",
+    "        classList.append(1)\n",
+    "        # 切分，解析数据，并归类为 0 类别\n",
+    "        wordList = textParse(\n",
+    "            open('data/4.NaiveBayes/email/ham/%d.txt' % i,\n",
+    "                 'r',\n",
+    "                 encoding='utf-8').read())\n",
+    "        docList.append(wordList)\n",
+    "        fullText.extend(wordList)\n",
+    "        classList.append(0)\n",
+    "    vocabList = createVocabularyList(docList)  #创建词汇表，不重复\n",
+    "    trainingSet = list(range(50))\n",
+    "    testSet = []  #创建存储训练集的索引值的列表和测试集的索引值的列表\n",
+    "    for i in range(10):  #从50个邮件中，随机挑选出40个作为训练集,10个做测试集\n",
+    "        randIndex = int(random.uniform(0, len(trainingSet)))  #随机选取索索引值\n",
+    "        testSet.append(trainingSet[randIndex])  #添加测试集的索引值\n",
+    "        del (trainingSet[randIndex])  #在训练集列表中删除添加到测试集的索引值\n",
+    "    trainMat = []\n",
+    "    trainClasses = []  #创建训练集矩阵和训练集类别标签系向量\n",
+    "    for docIndex in trainingSet:  #遍历训练集\n",
+    "        trainMat.append(bagofWords(vocabList,\n",
+    "                                   docList[docIndex]))  #将生成的词集模型添加到训练矩阵中\n",
+    "        trainClasses.append(classList[docIndex])  #将类别添加到训练集类别标签系向量中\n",
+    "    p0V, p1V, pSpam = trainNB(array(trainMat), array(trainClasses))  #训练朴素贝叶斯模型\n",
+    "    errorCount = 0  #错误分类计数\n",
+    "    for docIndex in testSet:  #遍历测试集\n",
+    "        wordVector = bagofWords(vocabList, docList[docIndex])  #测试集的词集模型\n",
+    "        if classifyNB(array(wordVector), p0V, p1V, pSpam) != classList[docIndex]:  #如果分类错误\n",
+    "            errorCount += 1  #错误计数加1\n",
+    "            print(\"分类错误的测试集：\", docList[docIndex])\n",
+    "    print('错误率：%.2f%%' % (float(errorCount) / len(testSet) * 100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "分类错误的测试集： ['home', 'based', 'business', 'opportunity', 'knocking', 'your', 'door', 'don', 'rude', 'and', 'let', 'this', 'chance', 'you', 'can', 'earn', 'great', 'income', 'and', 'find', 'your', 'financial', 'life', 'transformed', 'learn', 'more', 'here', 'your', 'success', 'work', 'from', 'home', 'finder', 'experts']\n",
+      "错误率：10.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "spamTest()"
    ]
   }
  ],
